--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "vue-fullcalendar": "^1.0.9",
     "vue-jlunar-datepicker": "^2.3.0",
     "vue-lunar-full-calendar": "^1.2.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
